--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ repositories {
 }
 
 dependencies {
+//	Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 //	Apache Commons Lang 便利機能　ユーティリティ　17回30分頃
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 
