--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.6'
+//	Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 //	Apache Commons Lang 便利機能　ユーティリティ　17回30分頃
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 
